<resources>
    <string name="app_name">Aksarakeun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="aksara_sunda">Aksara Sunda</string>
    <string name="latin">Latin</string>
    <string name="take_picture_desc">Tap here to take a picture!</string>
    <string name="translate">Translate</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="translation">Translation:</string>
</resources>