<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.auth.login.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/headerElipse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/img_elipse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="157dp"
            android:layout_height="157dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/headerElipse"
            app:layout_constraintStart_toStartOf="@+id/headerElipse"
            app:layout_constraintTop_toTopOf="@+id/headerElipse"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noto_bold"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="@+id/headerElipse"
            app:layout_constraintEnd_toEndOf="@+id/headerElipse"
            app:layout_constraintStart_toStartOf="@+id/headerElipse"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />


        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noto_medium"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerElipse" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/LayoutTextFieldOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPersonName"
            android:textColorHint="@color/gray_hint"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_medium"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/LayoutTextFieldOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@color/gray_hint"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_radius10"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/noto_medium"
            android:gravity="center"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="6dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/labelSeparator"
            app:layout_constraintEnd_toStartOf="@+id/labelSeparator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/labelSeparator" />

        <TextView
            android:id="@+id/labelSeparator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/noto_medium"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/view2"
            app:layout_constraintStart_toEndOf="@id/view1"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="17dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/labelSeparator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelSeparator"
            app:layout_constraintTop_toTopOf="@+id/labelSeparator" />


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/outlined_edittext_background"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/noto_medium"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSeparator"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintTop_toTopOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>